Fixed some layout issues

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,14 @@
 .page {
+    height: 70%;
+    padding: 0;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+
+    main{
+        img{
+            /* border: 1px solid salmon; */
+        }
+    }
+}
